Fix bug 406900 by doing a better job of unbinding XBL default content. r=smaug, sr=sicking