content/xbl/src/nsXBLInsertionPoint.cpp
@@ -114,3 +114,24 @@ nsXBLInsertionPoint::Matches(nsIContent* aContent, PRUint32 aIndex)
 {
   return (aContent == mParentElement && mIndex != -1 && ((PRInt32)aIndex) == mIndex);
 }
+
+void
+nsXBLInsertionPoint::UnbindDefaultContent()
+{
+  if (!mDefaultContent) {
+    return;
+  }
+
+  // Hold a strong ref while doing this, just in case
+  nsCOMPtr<nsIContent> defContent = mDefaultContent;
+
+  // Unbind the _kids_ of the default content, not just the default content
+  // itself, since they are bound to some other parent.  Basically we want to
+  // undo the mess that InstallAnonymousContent created.
+  PRUint32 childCount = mDefaultContent->GetChildCount();
+  for (PRUint32 i = 0; i < childCount; i++) {
+    defContent->GetChildAt(i)->UnbindFromTree();
+  }
+
+  defContent->UnbindFromTree();
+}
